# trading-system

./: AAPL.csv  CMakeLists.txt  README.txt  authentication.cpp  authentication.h  broker.cpp  broker.h  closed_positions.csv  dox.config  main.cpp  mainwindow.cpp  mainwindow.h  momentum_trading_strategy.cpp  momentum_trading_strategy.h  portfolio.cpp  portfolio.h  pricefetcher.cpp  pricefetcher.h  regression_trading_strategy.cpp  regression_trading_strategy.h  riskmanager.cpp  riskmanager.h  test.csv  trade.cpp  trade.h  trade_history.csv  tradingstrategy.cpp  tradingstrategy.h
docs/: annotated.html  authentication_8h_source.html  broker_8h_source.html  class_authentication-members.html  class_authentication.html  class_broker-members.html  class_broker.html  class_main_window-members.html  class_main_window.html  class_momentum_trading_strategy-members.html  class_momentum_trading_strategy.html  class_portfolio-members.html  class_portfolio.html  class_price_fetcher-members.html  class_price_fetcher.html  class_regression_trading_strategy-members.html  class_regression_trading_strategy.html  class_risk_manager-members.html  class_risk_manager.html  class_trade-members.html  class_trade.html  class_trading_strategy-members.html  class_trading_strategy.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  mainwindow_8h_source.html  menudata.js  momentum__trading__strategy_8h_source.html  portfolio_8h_source.html  pricefetcher_8h_source.html  regression__trading__strategy_8h_source.html  riskmanager_8h_source.html  struct_authentication_1_1_user-members.html  struct_authentication_1_1_user.html  trade_8h_source.html  tradingstrategy_8h_source.html
docs/search/: all_0.js  (+32 more)
latex/: annotated.tex  authentication_8h_source.tex  broker_8h_source.tex  class_authentication.eps  class_authentication.tex  class_broker.tex  class_main_window.tex  class_momentum_trading_strategy.eps  class_momentum_trading_strategy.tex  class_portfolio.tex  class_price_fetcher.tex  class_regression_trading_strategy.eps  class_regression_trading_strategy.tex  class_risk_manager.tex  class_trade.tex  class_trading_strategy.eps  class_trading_strategy.tex  files.tex  hierarchy.tex  mainwindow_8h_source.tex  momentum__trading__strategy_8h_source.tex  portfolio_8h_source.tex  pricefetcher_8h_source.tex  refman.tex  regression__trading__strategy_8h_source.tex  riskmanager_8h_source.tex  struct_authentication_1_1_user.tex  trade_8h_source.tex  tradingstrategy_8h_source.tex
yahoo-finance-master/: CMakeLists.txt  example
(+7 files in other folders)
